--- a/lista-compras/index.html
+++ b/lista-compras/index.html
@@ -18,6 +18,11 @@
     <button id="limparLista" type="button" onClick="limpaLista()">Limpar Lista</button>
     <button id="limparUltimo" type="button" onClick="limpaUltimo()">Limpar último</button>
   </form>
+  <form>
+    <label for="buscaItem">Nome do item</label>
+    <input type="text" id="buscaItem" placeholder="Item para busca">
+    <button id="buscaIem" type="button" onclick="buscaItem()"></button>
+  </form>
   <hr>
   <div class="lista">
     <ul id="listaCompras"></ul>
